<resources>
    <string name="app_name">Project 5</string>
    <string-array name="itemNames">
        <item>Chicago Build Your Own</item>
        <item>Chicago BBQ Chicken</item>
        <item>Chicago Deluxe</item>
        <item>Chicago Meatzza</item>
        <item>New York BBQ Chicken</item>
        <item>New York Deluxe</item>
        <item>New York Build Your Own</item>
        <item>New York Meatzza</item>
    </string-array>
<!--    <string name="order_numbers">dropDownMenu</string>-->
<!--    <string-array name="orderNumbers">-->
<!--        <item>None</item>-->
<!--    </string-array>-->
    <string name="cancel_order">Cancel Order</string>
    <string name="order_number">Order Number</string>
    <string name="pizza_manager">Pizza Manager</string>
    <string name="add_to_order">Add To Order</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="store_orders">Store Orders</string>
    <string name="current_orders">Current Orders</string>
    <string name="add_topping">Add topping</string>
    <string name="remove_topping">Remove topping</string>
    <string name="crust">Crust</string>
    <string name="textview">TextView</string>
    <string name="pizza_price">Pizza Price</string>
    <string name="available_toppings">Available Toppings</string>
    <string name="selected_toppings">Selected Toppings</string>
    <string name="order_number_label">Order Number:</string>
    <string name="order_total_label">Order Total:</string>
    <string name="textviewPH">TextView</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="place_order">Place Order</string>
    <string name="clear_order">Clear Order</string>
    <string name="order_number_current">Order Number</string>
    <string name="subtotal">Subtotal</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="order_total">Order Total</string>
    <string name="store_orders_main">Store Orders</string>
    <string name="current_orders_main">Current Orders</string>
</resources>